--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ a {
   transform: translateX(4px);
   color:#74b72a;
 }
+.saibaMais:hover{
+  transform: translateX(4px);
+  color:#74b72a; 
+}
  .hero3 {
   height: 40vh;
   width: 100%;
@@ -88,8 +92,8 @@ a {
   .hero4 {
   height: 40vh;
   width: 100vw;
-  background-image:url("../another.png");
-  background-position: 100% 100% ;
+  background-image:url("../predios.jpeg");
+  background-position: 80% 10% ;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -124,10 +128,15 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  
-   /*background-color: gray;
-    background-blend-mode: luminosity;*/
-
+ }
+ .hero8{
+  height: 100vh;
+  width: 100vw;
+  background-image:url("../trilho_another.png");
+  background-position:center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: relative;
  }
 #navio{
   height:300px;
@@ -588,4 +597,41 @@ rotate:-45deg;
 text-align: left;
 width:100%;
 position:absolute;
+}
+/*EARTH TURNING*/
+.globe {
+  border: 2px solid #8bc34a;
+  border-radius: 50%;
+  height: 140px;
+  left: 50%;
+  overflow: hidden;
+  position: relative;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 140px;
+}
+.globe svg {
+  -webkit-animation: rotation 5s linear 0s infinite;
+          animation: rotation 5s linear 0s infinite;
+}
+.globe svg path {
+  stroke: #8BC34A;
+}
+
+@-webkit-keyframes rotation {
+  from {
+    transform: translateX(0);
+  }
+  from {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes rotation {
+  from {
+    transform: translateX(0);
+  }
+  from {
+    transform: translateX(-50%);
+  }
 }
