--- a/css/style.css
+++ b/css/style.css
@@ -635,3 +635,70 @@ position:absolute;
     transform: translateX(-50%);
   }
 }
+/*
+ * ==== Losange
+ */
+.losange{
+    margin: 50px auto;
+    transform: rotate(45deg) translateY(10px);
+}
+.losange, .losange div {
+  transform-origin: 50% 50%;
+  overflow: hidden;
+  width: 250px;
+  height: 250px;
+}
+
+.losange:after {
+    content: "";
+  position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    border: 10px solid rgba(182, 231, 27, 0.54);
+    box-sizing: border-box;
+    -wekbit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+
+}
+
+
+.losange .los1 {
+  text-align:center;
+  margin-left: 40px;
+  width: 340px;
+  height: 220px;
+  transform: rotate(-45deg) translateY(-74px);
+  
+}
+.losange .los1 img {
+  width: 100%;
+  height: auto;
+}
+
+.par {
+    display: block;
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    border: 2px solid #fff;
+    top: 100%;
+    text-align: left;
+    font-family: tahoma;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 46px;
+    -webkit-transition: all .8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    -moz-transition: all .8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    -o-transition: all .8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: all .8s cubic-bezier(0.68, -0.55, 0.27, 1.55);  
+}
+.par a{
+  text-decoration:none;
+  color:#fff
+}
+
+.losange:hover .par{
+    top: 37%;
+}
