--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ a {
  .hero8{
   height: 100vh;
   width: 100vw;
-  background-image:url("../mapa_maior.png");
+  background-image:url("../trilho_another.png");
   background-position:center;
   background-repeat: no-repeat;
   background-size: contain;
