--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ a {
   .hero4 {
   height: 40vh;
   width: 100vw;
-  background-image:url("../predios.jpeg");
+  background-image:url("../onde_estamos_bg2.jpeg");
   background-position: 80% 10% ;
   background-repeat: no-repeat;
   background-size: cover;
