--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ a {
   height: 100vh;
   width: 100vw;
   background-image:url("../mapa_maior.png");
-  background-position:center;
+  background-position:100% 100%;
   background-repeat: no-repeat;
   background-size: contain;
   position: relative;
