--- a/css/style.css
+++ b/css/style.css
@@ -129,16 +129,12 @@ a {
   position: relative;
  }
  .hero8{
-  padding-top:5vh;
-   padding-bottom:5vh;
-   border:solid 2px red;
-   background-origin: content-box;
-  height: 100vh;
-  width: 100vw;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
   background-image:url("../mapa_maior.png");
-  background-position:100% 100%;
+  background-position:center;
   background-repeat: no-repeat;
-  background-size: cover;
   position: relative;
  }
 #navio{
