--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ a {
  }
  .hero8{
     background-size: cover;
-    height: 100vh;
+    height: 100%;
     width: 100%;
   background-image:url("../mapa_maior.png");
   background-position:center;
