--- a/css/style.css
+++ b/css/style.css
@@ -129,11 +129,11 @@ a {
   position: relative;
  }
  .hero8{
-  background-size: cover;
+  background-size: contain;
   height: 100vh;
   width: 100%;
   background-image:url("../mapa_maior.png");
-  background-position:center;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
  }
