--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   position: relative; }
   body:before {
     content: "";
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
